--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -1,12 +1,12 @@
 <div class="header">
-  <h1>Learning to Code</h1>
+  <h1>Learning to Code FORKED</h1>
   <h3>A Collection of Ruby on Rails Resources for Beginners</h3>
 </div>
 <hr/>
 <div class="pins">
   <% @pins.each_slice(3) do |row| %>
     <div class="row">
-      <% row.each do |pin| %>      
+      <% row.each do |pin| %>
         <div class="pin-container col-md-4">
           <div class="pin">
             <div class="pin-header">
