Adding images and a little style

--- a/app/assets/stylesheets/pins.css.scss
+++ b/app/assets/stylesheets/pins.css.scss
@@ -1,3 +1,7 @@
+body {
+  background: url(asset-path('laptop-background.jpg')) no-repeat;
+}
+
 a {
   color: #dd5566;
 }
@@ -17,7 +21,7 @@ h1 {
 }
 .show-pin{
   background-color: #fff;
-  padding: 40px;  
+  padding: 40px;
 }
 hr{
   clear:both;
