--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -19,14 +19,14 @@
                 <% end %>
               </div>
 
-              <div class="col-xs-9">
+              <div class="pin-title col-xs-9">
                 <h4>
-                  <a href="<%= pin_path(pin) %>">
+                  <a class="url" href="<%= pin_by_name_path(slug: pin.slug) %>">
                     <%= "#{pin.title}" %>
                   </a>
                 </h4>
-                <a class="url" href="<%= "#{pin.url}" %>">
-                  <%= "#{pin.url}" %>
+                <a class="url" href="<%= "#{pin.url}" %>" target="_blank">
+                  <%= "#{pin.url.truncate(30)}" %>
                 </a>
               </div>
 
@@ -39,5 +39,3 @@
     </div>
   <% end %>
 </div>
-
-<hr/>
