--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -21,13 +21,10 @@
 
               <div class="pin-title col-xs-9">
                 <h4>
-                  <a class="url" href="<%= pin_by_name_path(slug: pin.slug) %>">
-                    <%= "#{pin.title}" %>
-                  </a>
+                  <%= link_to "#{pin.title}", pin_by_name_path(slug: pin.slug) %>
+
                 </h4>
-                <a class="url" href="<%= "#{pin.url}" %>" target="_blank">
-                  <%= "#{pin.url.truncate(30)}" %>
-                </a>
+                <%= link_to "#{pin.url}", "#{pin.url}", html_options = {target: "_blank", class: "url"} %>
               </div>
 
             </div>
